Small fixes + add comments