@@ -9,7 +9,10 @@ import java.time.Duration;
 import java.time.LocalTime;
 
 /**
- * java -Xmx512m -Xms512m -XX:+PrintGCDetails -XX:+UseG1GC -jar target/HW04.jar
+ * java -Xmx512m -Xms512m -XX:+UseSerialGC -jar target/HW04.jar
+ * java -Xmx512m -Xms512m -XX:+UseParallelGC -jar target/HW04.jar
+ * java -Xmx512m -Xms512m -XX:+UseConcMarkSweepGC -jar target/HW04.jar
+ * java -Xmx512m -Xms512m -XX:+UseG1GC -jar target/HW04.jar
  */
 public class Main {
     public static void main(String... args) throws Exception {
